--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 # README
 
-This repository stores replication data for the study, "Lewis Carroll and the Red Hot Potato: a graph theoretic approach to a linear algebraic identity," by Melanie Fraser.
+This repository stores replication code in Mathematica for the paper, "Lewis Carroll and the Red Hot Potato: a graph theoretic approach to a linear algebraic identity," by Melanie Fraser.
